見出し変更

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 
   <div class="contact">
-    <h1 class="contact__ttl">Contact</h1>
+    <h1 class="contact__ttl">Contactフォーム</h1>
 
     <form action="">
       <table class="contact__table">
